1.piyush/D47-Gateway-API/IMP-hands-on/2-gateway-api-envoy/cafe-app.yaml
# cafe-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee-3
  template:
    metadata:
      labels:
        app: coffee-3
    spec:
      containers:
      - name: coffee
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-3
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: coffee-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tea-3
  template:
    metadata:
      labels:
        app: tea-3
    spec:
      containers:
      - name: tea
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea-3
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: tea-3
