1.piyush/D47-Gateway-API/IMP-hands-on/2-gateway-api-envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-envoy-gateway
  namespace: default
spec:
  gatewayClassName: envoy-gateway-class   # from the quickstart
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
