1.piyush/D47-Gateway-API/IMP-hands-on/2-gateway-api-envoy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-envoy-route
  namespace: default
spec:
  parentRefs:
  - name: my-envoy-gateway
  hostnames:
  - "myapp.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: tea-3   # your own service
      port: 80
